tmp-dev-full/objects/GdPointRefreshStage__c/GdPointRefreshStage__c.object-meta.xml
<CustomObject>
    <label>Point Refresh Stage</label>
    <nameField>
        <displayFormat>PRS-{000000}</displayFormat>
        <label>Point Refresh Stage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>