tmp-dev-full/objects/GdPointRefreshStage__c/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>Event Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>