tmp-dev-full/objects/GdPointRefreshStage__c/fields/EventKey__c.field-meta.xml
<CustomField>
    <fullName>EventKey__c</fullName>
    <label>Event Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>