tmp-dev-full/objects/GdPointRefreshStage__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>