tmp-dev-full/objects/GdPointRefreshStage__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>