tmp-dev-full/objects/GdPointRefreshStage__c/fields/OriginKey__c.field-meta.xml
<CustomField>
    <fullName>OriginKey__c</fullName>
    <label>Origin Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>