tmp-dev-full/objects/GdPointRefreshStage__c/fields/PointTypeCode__c.field-meta.xml
<CustomField>
    <fullName>PointTypeCode__c</fullName>
    <label>Point Type Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>