tmp-dev-full/objects/GdPointRefreshStage__c/fields/RemainingPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainingPoints__c</fullName>
    <label>Remaining Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>