tmp-dev-full/objects/GdPointRefreshStage__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Run</label>
    <referenceTo>GdPointRefreshRun__c</referenceTo>
    <relationshipLabel>Point Refresh Stages</relationshipLabel>
    <relationshipName>PointRefreshStages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>