tmp-dev-full/objects/GdPointRefreshStage__c/fields/SaleNo__c.field-meta.xml
<CustomField>
    <fullName>SaleNo__c</fullName>
    <label>Sale No</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>