tmp-dev-full/objects/GdPointRefreshStage__c/fields/SortKey__c.field-meta.xml
<CustomField>
    <fullName>SortKey__c</fullName>
    <label>Sort Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>