tmp-dev-full/objects/GdPointRefreshStage__c/fields/SourceKey__c.field-meta.xml
<CustomField>
    <fullName>SourceKey__c</fullName>
    <label>Source Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>