tmp-dev-full/objects/GdPointRefreshStage__c/fields/StageType__c.field-meta.xml
<CustomField>
    <fullName>StageType__c</fullName>
    <label>Stage Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>