tmp-dev-full/objects/GdPointRefreshStage__c/fields/TargetJournalId__c.field-meta.xml
<CustomField>
    <fullName>TargetJournalId__c</fullName>
    <label>Target Journal Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>