tmp-dev-full/objects/GdPointRefreshStage__c/fields/TargetLedgerId__c.field-meta.xml
<CustomField>
    <fullName>TargetLedgerId__c</fullName>
    <label>Target Ledger Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>